@@ -132,7 +132,7 @@
     </layout>
    </item>
    <item row="0" column="1">
-    <widget class="QStackedWidget" name="stackedWidget">
+    <widget class="QStackedWidget" name="pageStack">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>4</horstretch>
@@ -3087,7 +3087,7 @@ p, li { white-space: pre-wrap; }
   <connection>
    <sender>pageList</sender>
    <signal>currentRowChanged(int)</signal>
-   <receiver>stackedWidget</receiver>
+   <receiver>pageStack</receiver>
    <slot>setCurrentIndex(int)</slot>
    <hints>
     <hint type="sourcelabel">
